feat: setup tests

--- a/SkyEngTranslate.xcodeproj/xcshareddata/xcschemes/Development.xcscheme
+++ b/SkyEngTranslate.xcodeproj/xcshareddata/xcschemes/Development.xcscheme
@@ -56,6 +56,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "4FECF42926088B7D0081F034"
+               BuildableName = "SkyEngTranslateTests.xctest"
+               BlueprintName = "SkyEngTranslateTests"
+               ReferencedContainer = "container:SkyEngTranslate.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
